# IHUI-AI

./: .actrc  .check-api-routes-ignore.json  .dockerignore  .env.act  .env.example  .env.production.example  .gitattributes  .gitignore  .npmrc  .prettierignore  .secrets.act.example  AGENT.md  AGENTS.md  AI动态模块部署指南.md  DEAD_CODE_CANDIDATES.md  DEAD_CODE_FULL_REPORT.md  DEPLOYMENT-R65.md  DESIGN.md  Dockerfile.api  Dockerfile.api-new  Dockerfile.cli  Dockerfile.client  Dockerfile.migrate  Dockerfile.server  Dockerfile.web  Dockerfile.web-new  IHUI-AI-交接文档.md  LOOP.md  MIGRATION_GAP_ANALYSIS.md  MIGRATION_GAP_REPORT.md  PROJECT_PLAN.md  README.en.md  README.ja.md  README.ko.md  README.md  STATE.md  _commit_msg.txt  audit_100pct_r76.md  audit_java_microservices_r76.md  audit_m63_r76.md  (+45 more)
apps/ai-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test-request.json  verify_main.py
apps/ai-service/app/: __init__.py  main.py  telemetry.py
apps/ai-service/tests/: conftest.py  test_a2a.py  test_a2a_service.py  test_agent_checkpoint.py  test_agent_comm.py  test_agent_graph.py  test_agent_loop.py  test_agent_loop_v2.py  test_agent_orchestrator.py  test_agent_runtime.py  test_agent_runtime_router.py  test_ai_skills.py  test_ai_tutor.py  test_alibaba_dashscope_provider.py  test_anthropic_provider.py  test_api_client.py  test_api_v1.py  test_archive_daily.py  test_artifacts_store.py  test_audit.py  test_audit_service.py  test_automation_executor.py  test_base_adapter.py  test_base_provider.py  test_bilibili.py  test_business_flow_integration.py  test_chat.py  test_codebase_indexer.py  test_command_streamer.py  test_compaction.py  test_complete_stream_question.py  test_config.py  test_configure_automation_task_real.py  test_content_parser.py  test_context_compaction.py  test_context_engine.py  test_conversation.py  test_credentials_crypto.py  test_cross_contam_scan.py  test_dag.py  (+92 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
server/: .dockerignore  .editorconfig  .env.alert.example  .env.example  .env.neon.example  .env.oracle.example  .env.production.example  .env.production.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  DEPLOY.md  Dockerfile  LICENSE  README.md  _analyze_legacy.py  _analyze_remaining.py  _cleanup_member_stubs.py  _cleanup_member_stubs_v2.py  alembic.ini  coze_oauth_config.json  debug_dollar.py  debug_dollar2.py  debug_dollar3.py  debug_glob.py  debug_re_sub.py  debug_re_sub2.py  gunicorn_conf.py  nginx.conf  noise-rules.yml  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.min.txt  requirements.txt  run-tests.bat  run_dev.py  setup_postgresql.py  start-all.bat  (+2 more)
server/.github/: README.md
server/.github/workflows/: bandit.yml  blue-green-deploy.yml  ci-fast.yml  ci-nightly.yml  ci.yml  dead-code-cve-scan.yml  migration-tests.yml  observability-drills.yml  pg_deploy_cicd.yml  round9_nightly.yml  s3-lifecycle-drift.yml  sdk-drift.yml  (+6 more)
server/alembic/: bootstrap.py  env.py  gen_init_sql.py
server/app/: __init__.py  alert_inhibition.py  alertmanager_emulator.py  backfill_broadcaster.py  backfill_event.py  backfill_persister.py  canary.py  canary_audit_store.py  canary_auto_promoter.py  canary_metrics.py  canary_metrics_source.py  canary_stages.py  celery_app.py  config.py  database.py  database_supabase.py  db_per_tenant.py  dependencies.py  main.py  metrics_business.py  metrics_rate_limit.py  monitoring.py  redis_client.py  resilience.py  security.py  shadow_compare.py  shadow_ratio_controller.py  shadow_traffic.py  telemetry.py  tenant_demo.py
server/argocd/: application.yml
server/audit/: hot_config.json  rollout_sampling.jsonl
server/config/: observability.env.example  production.env.example  s3-lifecycle.yml
server/deploy/: otel-collector-config.yaml  prometheus.yml
server/docker/: docker-compose.middleware.yml
server/docs/: MULTI_AGENT_API.md  MULTI_TENANT.md  MULTI_TENANT_DESIGN.md  PERFORMANCE_BASELINE.md  PRE_COMMIT_GUIDE.md  README.md
server/jaeger/: sampling_strategies.json
server/migrations/: version_20260626_add_missing_tables.sql
server/scripts/: __init__.py  _compare_ruoyi.py  _delete_empty_g_drive_dirs.ps1  _delete_g_drive_artifacts.ps1  _gen_ruoyi_crud.py  _health_check.py  _openapi_baseline.json  _scan_client_hardcoded_paths.py  _scan_hardcoded_g_drive_paths.py  _scan_migration_refs.py  _scan_migration_refs_report.json  _verify_e2e_login_outdir.py  adaptive_chaos.py  add_missing_indexes.py  ai_capacity.py  ai_testing.py  aiops.py  aiops_denoise.py  alembic_autogen.py  alembic_offline_verify.py  alembic_production_upgrade.sh  alembic_verify_migration.py  alert_8category_drill.py  alert_dedup.py  alert_drill_8channels.py  alert_failure_monitor.py  alert_history_db.py  alert_history_integration.py  alert_link_deploy.sh  alert_noise_integration.py  alert_noise_v2.py  alert_router.py  alertmanager_deploy.py  alipay_private_key_backup.py  analyze_edu_gap.py  analyze_p1p2_gap.py  api_gateway.py  argo_deploy.sh  argocd_multienv.py  audit_plaintext_credentials.py  (+318 more)
server/tests/: __init__.py  _cleanup_g_users_dir.py  _e2e_full_verification.py  _final_path_verification.py  _investigate_g_users.py  _smoke_app_routes.py  _verify_alembic_chain.py  _verify_outdir_no_g_drive.py  bench_phase22_stage_c.py  conftest.py  test_agents.py  test_agreement.py  test_alembic_008_static.py  test_alembic_audit.py  test_alembic_ci.py  test_alembic_ws_token.py  test_alert_channels.py  test_alert_drill_script.py  test_alert_dry_run.py  test_alert_e2e_all_channels.py  test_alert_full_chain_drill.py  test_alert_inhibition.py  test_alert_pagerduty.py  test_alertmanager_e2e.py  test_alerts.py  test_alipay_util.py  test_alipay_util_extended.py  test_api_contract.py  test_api_version_middleware.py  test_auth.py  test_auth_middleware.py  test_auto_recovery_metrics.py  test_avatar_sync_service.py  test_backfill_broadcaster.py  test_backfill_persister.py  test_backfill_tenants.py  test_baseline.py  test_biz_alerts.py  test_biz_metrics_tenant_label.py  test_biz_metrics_user.py  (+247 more)
(+19779 files in other folders)
