[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhs-platform"
version = "1.0.0"
description = "Unified AI Agent Marketplace & Education Platform"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.35.0",
    "sse-starlette>=3.0.2",

    # Database (PostgreSQL)
    "SQLAlchemy>=2.0.43",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",

    # Settings
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",

    # Async / HTTP
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.15",

    # WebSocket
    "python-socketio>=5.13.0",
    "python-engineio>=4.12.2",
    "wsproto>=1.2.0",
    "websockets>=11.0.0",

    # Task scheduling
    "APScheduler>=3.10.4",

    # Excel
    "openpyxl>=3.1.5",

    # File / Image
    "Pillow>=11.3.0",
    "minio>=7.2.0",
    "reportlab>=4.4.3",
    "lxml>=6.0.1",

    # AI SDKs
    "cozepy>=0.2.0",
    "openai>=1.108.0",
    "zhipuai>=2.0.0",
    "dashscope>=1.17.0",
    "tencentcloud-sdk-python>=3.0.0",
    "langchain>=1.2.0",
    "langchain-openai>=0.0.5",
    "langchain-postgres>=0.0.10",
    "langchain-text-splitters>=0.3.0",
    "crewai>=1.14.0,<2",
    "crewai-tools>=1.14.0,<2",
    "mcp>=1.13.1",

    # Redis
    "redis>=4.5.0",

    # Cryptography
    "cryptography>=46.0.1",

    # Logging
    "loguru>=0.7.3",

    # HTTP client fallback
    "requests>=2.32.5",

    # Date / time
    "python-dateutil>=2.8.0",
    "pytz>=2025.2",

    # Monitoring
    "psutil>=7.1.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",

    # Utilities
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.2",
    "MarkupSafe>=3.0.2",
    "Jinja2>=3.1.6",

    # Testing
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "isort>=5.13.0",
    "ruff>=0.15.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0.0",
    "locust>=2.31.0",
    "respx>=0.21.1",
    "aiosmtpd>=1.4.6",
    "playwright>=1.49.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
    "slowapi>=0.1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
# 关键测试 marker
markers = [
    "critical: Critical smoke tests for CI",
    "integration: Integration tests",
    "slow: Slow-running tests",
    "websocket: WebSocket tests",
    "sse: Server-Sent Events tests",
    "contract: API contract tests",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["app", "tests", "scripts"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["alembic/versions", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "B905", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["B011", "N802", "N803"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
precision = 2
